// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandCollapseOnlyModifierButtons renders per snapshot 1`] = `
<DocumentFragment>
  <div
    class="cardsVisualizationModifiersContainer"
  >
    <mock-expandcollapseallbutton
      allcardscollapsed="true"
      cardselectionmessagecreator="[object Object]"
      visualhelperenabled="true"
    />
  </div>
</DocumentFragment>
`;

exports[`ExpandCollapseVisualHelperModifierButtons renders per snapshot 1`] = `
<DocumentFragment>
  <div
    class="cardsVisualizationModifiersContainer"
  >
    <mock-expandcollapseallbutton
      allcardscollapsed="true"
      cardselectionmessagecreator="[object Object]"
      visualhelperenabled="true"
    />
    <mock-visualhelpertoggle
      allcardscollapsed="true"
      cardselectionmessagecreator="[object Object]"
      visualhelperenabled="true"
    />
  </div>
</DocumentFragment>
`;
